--- a/hospitality.html
+++ b/hospitality.html
@@ -1,4 +1,7 @@
 <html xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns="http://www.w3.org/1999/xhtml">
+   <head>
+      <link rel="stylesheet" type="text/css" href="hospitality.css"></link>
+   </head>
    <body>
       
       
